--- a/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
+++ b/ACL4SSR_Online_Full_MultiMode_smart_byiuya.ini
@@ -187,7 +187,8 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🎯 全球直连`[]🚀 节点选
 
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]🚀 节点选择`[]🎯 全球直连
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]🚀 节点选择`[]🎯 全球直连
-custom_proxy_group=⛓️‍💥 dialer-selector`smart`[]🚀 手动切换`^(?!(?i).*?(jiarui|一分|69云))((?i)vless|vmess|trojan)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
+custom_proxy_group=⛓️‍💥 dialer-selector`smart`[]🚀 手动切换`^(?!(?i).*?(jiarui|一分|69云))(vless|vmess|trojan)`http://cp.cloudflare.com/generate_204`300,,50`uselightgbm=true`collectdata=false`strategy=sticky-sessions`policy-priority=""
+custom_proxy_group=⛓️‍💥 dialer-selector2`smart`^((?!(?i).*?(jiarui))((?i)vless|vmess|trojan))
 
 custom_proxy_group=🏳️ FINAL`select`(webshare)`[]🚀 手动切换
 ;设置分组标志位
